# soc_threat_analyzer

./: .flake8  .gitignore  CHANGELOG.md  README.md  README.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
data/: ips.txt  logs.txt
soc_threat_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: dashboard.py  detector.py  main.py  parser.py  risk_scoring.py  threat_intel.py
tests/: conftest.py  test_all.py
