[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-threat-analyzer"
version = "1.0.0"
description = "SOC simulation tool for brute-force detection, threat intelligence enrichment and risk scoring"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["security", "soc", "threat-intelligence", "mitre-attack", "sigma", "detection"]
classifiers = ["Development Status :: 4 - Beta",
               "Intended Audience :: Information Technology",
               "Topic :: Security",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
               "License :: OSI Approved :: MIT License"]
dependencies = ["requests>=2.33.1,<3.0",
                "flask>=3.1.0,<4.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0.3,<10.0",
       "pytest-cov>=4.1"]
lint = ["flake8>=7.0",
        "flake8-bugbear>=24.0"]

[project.scripts]
soc-analyze = "src.main:run_pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/main.py", "src/dashboard.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60
